# location-intel

./: .env.example  .gitignore  BRAND_SCRAPER_STATUS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.sh
.streamlit/: config.toml
docs/: BRAND_SCRAPER_STATUS.md  architecture.md
scripts/: review_competitors.py
src/: app.py  brand_resolver.py  cli.py  location_intel.db-journal  logging_setup.py  nlu.py  pipeline.py
src/analysis/: aggregator.py  competitor.py  market_analysis.py  pincode_mapper.py  reconciler.py  sentiment.py
src/cache/: db.py  manager.py  redis_cache.py
src/caching/: cache_manager.py  db.py  redis_cache.py
src/core/: BRAND_SCRAPER_STATUS.md  app.py  cache_manager.py  cli.py  config.py  db.py  logging_setup.py  nlu.py  pipeline.py  redis_cache.py
src/fetchers/: _common.py  brand_scraper.py  brand_scraper_js.py  google_places.py  multi_fetcher.py  osm.py  serper.py
src/maintenance/: build_seed_brands.py  load_brand_seed.py  rebuild_brand_index.py  refresh_brand_sizes.py  review_competitors.py
src/nlu/: brand_resolver.py  brand_size.py  guardrails.py  parser.py
src/reconciler/: reconciler.py
src/scripts/: discover_apis.py  load_brand_seed.py  rebuild_brand_index.py  refresh_brand_sizes.py  review_competitors.py
src/tools/: export_data.py  warm_cache.py
src/ui/: streamlit_app.py
tests/: conftest.py  test_brand_resolver.py  test_brand_scraper_js.py  test_brand_size_estimation.py  test_db_primitives.py  test_discovered_competitors.py  test_lazy_enrichment.py  test_nlu_with_hints.py  test_query_guardrails.py
