[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "location-intel"
version = "0.2.1"
description = "Natural-language location intelligence."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Divyasha Agrawal" }]
keywords = ["location", "retail", "google-places"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "streamlit>=1.30.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
    "geopy>=2.4.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "redis>=5.0.0",
    # Python client for the Ollama NLU daemon. The daemon is a system
    # binary; install via ./setup.sh or `brew install ollama`.
    "ollama>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-playwright>=0.5.0",
]
# Enables JS-rendered brand scraping (Starbucks, KFC, Pizza Hut, etc.).
# Install separately with: pip install 'location-intel[playwright]' && playwright install chromium
playwright = [
    "playwright>=1.45.0",
]
# Enables embedding-based brand resolution (FAISS + sentence-transformers).
# Adds ~500MB of dependencies (torch). Without these the resolver falls back
# to exact substring matching against the brand_registry table.
embeddings = [
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
]

[project.scripts]
location-intel = "src.cli:main"
warm-cache = "src.tools.warm_cache:main"
export-data = "src.tools.export_data:main"

[project.urls]
Architecture = "docs/architecture.md"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function-call-in-default-argument (Streamlit widgets)
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false
check_untyped_defs = true
files = ["src"]
